# atpl_project

./: .gitignore  Makefile  README.md  example.fut  run_benchmarks.py
futhark/: Makefile  definitions.fut  futhark.pkg  main  main.c  main.fut  main.h  main.json
futhark/results/: result.out  results.json
interface/HQPlayground/: hqp.cabal
interface/HQPlayground/exe/: GPUHQPTests.hs  HQPFut.hs  HybridGPUCPU.hs  NoCloning.hs  ProgramInversion.hs  Stabilizers.hs  TestRepeater.hs  UnsupportedGPU.hs  YesTeleportation.hs  benchmarking.hs  interface.hs
interface/HQPlayground/futhark-gen/: hqp_gpu.c  hqp_gpu.h  hqp_gpu.json
interface/HQPlayground/solutions/: MZIExperiment.hs  ProgramInversion.hs  YesTeleportation.hs
interface/HQPlayground/src/: HQP.hs
interface/HQPlayground/src/HQP/: PrettyPrint.hs  QOp.hs
interface/HQPlayground/src/HQP/PrettyPrint/: CircDiagram.hs  PrettyMatrix.hs  PrettyOp.hs
interface/HQPlayground/src/HQP/QOp/: HelperFunctions.hs  MPSSemantics.hs  MPSSemanticsU.hs  MatrixSemantics.hs  Operator.hs  Semantics.hs  Simplify.hs  StabilizerSemantics.hs  StateHmatrixSemantics.hs  StatevectorSemantics.hs  Syntax.hs  TensorSemantics.hs
interface/HQPlayground/src/HQP/QOp/GPU/: Compile.hs  RunFuthark.hs
interface/HQPlayground/src/Programs/: QFT.hs  QuantumAdder.hs  RepeaterProtocol.hs
qiskit/: benchmarking.py
results/: result.out  results.json  results_combined.csv
